.deploy/cicd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: watchtower
  annotations:
    external-dns.alpha.kubernetes.io/hostname: watchtower.home.coolkev.com
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
  name: watchtower
  namespace: cicd
spec:
  ingressClassName: traefik
  rules:
    - host: watchtower.home.coolkev.com
      http:
        paths:
          - backend:
              service:
                name: watchtower
                port:
                  number: 80
            path: /
            pathType: Prefix
